minor changes to header link icons

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
               <h2 class="subtitle is-size-3 is-size-3-tablet" style="color: rgb(206 247 255) ">And I'm a Front-end <br>
                 web Developer/designer.</h2>
               <div class="content mb-1 px-1">
-                <p class="has-text-weight-regular is-size-6">
-                    I make pretty stuff with <span class="has-text-weight-medium">Javascript</span> and <span class="has-text-weight-medium">CSS (and lots of tea). </span>
+                <p class="has-text-weight-light is-size-6">
+                    I make pretty stuff with <span class="has-text-weight-medium">JavaScript</span> and <span class="has-text-weight-medium">CSS</span> (and lots of tea).
                 </p>
               </div>
               <div class="container is-narrow" id="social-links">
@@ -32,10 +32,10 @@
                   <a href="twitter.com/lofiln" class="fab fa-lg fa-twitter" style="color: #fff"></a>
                 </span>
                 <span class="icon is-large">
-                  <a class="fab fa-lg fa-github" style="color: #fff"></a>
+                  <a class="fab fa-lg fa-github-alt" style="color: #fff"></a>
                 </span>
                 <span class="icon is-large">
-                  <a class="fab fa-lg fa-telegram" style="color: #fff"></a>
+                  <a class="fab fa-lg fa-telegram-plane" style="color: #fff"></a>
                 </span>
               </div>
             </div>
