--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
               <h2 class="subtitle is-size-3 is-size-3-tablet" style="color: rgb(206 247 255) ">And I'm a Front-end <br>
                 web Developer/designer.</h2>
               <div class="content mb-1 px-1">
-                <p class="has-text-weight-light is-size-5 mr-1">
-                    I make pretty stuff with <span class="has-text-weight-medium">JavaScript</span> and <span class="has-text-weight-medium">CSS</span> <br> (and lots of tea).
+                <p class="has-text-weight-light is-size-6 mr-1">
+                    I make pretty stuff with <br> <span class="has-text-weight-medium">JavaScript</span> and <span class="has-text-weight-medium">CSS</span> (and lots of tea).
                 </p>
               </div>
               <div class="container is-narrow" id="social-links">
