--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <h1 class="title is-size-huge is-size-3-only-touch mb-4">I'm Lenin Nava</h1>
               <h2 class="subtitle is-size-3 is-size-3-tablet" style="color: rgb(206 247 255) ">And I'm a Front-end <br>
                 web Developer/designer.</h2>
-              <div class="content mb-1 px-1">
+              <div class="content mb-1">
                 <p class="has-text-weight-light is-size-6 mr-1">
                     I make pretty stuff with <br> <span class="has-text-weight-medium">JavaScript</span> and <span class="has-text-weight-medium">CSS</span> (and lots of tea).
                 </p>
