--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <div class="hero is-primary has-text-centered-touch has-text-right is-fullheight" id="information">
-      <div class="hero-body">
+      <div class="hero-body"> 
         <div class="container">
           <div class="columns is-centered is-vcentered">
             <div class="column is-5" id="information-column">
@@ -23,8 +23,8 @@
               <h2 class="subtitle is-size-3 is-size-3-tablet" style="color: rgb(206 247 255) ">And I'm a Front-end <br>
                 web Developer/designer.</h2>
               <div class="content mb-1">
-                <p class="has-text-weight-light is-size-6 mr-1">
-                    I make pretty stuff with <br> <span class="has-text-weight-medium">JavaScript</span> and <span class="has-text-weight-medium">CSS</span> (and lots of tea).
+                <p class="has-text-weight-medium is-size-6 mr-1">
+                    I make pretty stuff with <br> <span class="has-text-weight-bold">JavaScript</span> and <span class="has-text-weight-bold">CSS</span> (and lots of tea).
                 </p>
               </div>
               <div class="container is-narrow" id="social-links">
