initial header animations, shadows

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div class="container">
           <div class="columns is-centered is-vcentered">
             <div class="column is-5" id="information-column">
-              <h1 class="title is-size-huge is-size-3-only-touch mb-4">I'm Lenin Nava</h1>
-              <h2 class="subtitle is-size-3 is-size-3-tablet" style="color: rgb(206 247 255) ">And I'm a Front-end <br>
+              <h1 class="title is-size-huge is-size-3-only-touch mb-2">I'm Lenin Nava</h1>
+              <h2 class="subtitle is-size-3 is-size-3-tablet mb-1" style="color: rgb(206 247 255) ">And I'm a Front-end <br>
                 web Developer/designer.</h2>
-              <div class="content mb-1">
-                <p class="has-text-weight-medium is-size-6 mr-1">
+             <!-- <div class="content mb-1">
+                 <p class="has-text-weight-medium is-size-6">
                     I make pretty stuff with <br> <span class="has-text-weight-bold">JavaScript</span> and <span class="has-text-weight-bold">CSS</span> (and lots of tea).
-                </p>
-              </div>
+                </p> 
+              </div> -->
               <div class="container is-narrow" id="social-links">
                 <span class="icon is-large">
                   <a href="twitter.com/lofiln" class="fab fa-lg fa-twitter" style="color: #fff"></a>
