--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="columns is-centered is-vcentered">
             <div class="column is-5" id="information-column">
               <h1 class="title is-size-huge is-size-3-only-touch mb-2">I'm Lenin Nava</h1>
-              <h2 class="subtitle is-size-3 is-size-3-tablet mb-1" style="color: rgb(206 247 255) ">And I'm a Front-end <br>
+              <h2 class="subtitle is-size-3 is-size-3-tablet mb-1">And I'm a Front-end <br>
                 web Developer/designer.</h2>
              <!-- <div class="content mb-1">
                  <p class="has-text-weight-medium is-size-6">
