changes to mobile navbar text

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
               </li>
               
               <li>
-                <a class="has-text-weight-bold" href="#">Blog posts
+                <a class="has-text-weight-bold" href="#">Posts
                   <span class="tag is-info ml-2">Soon!</span></a>
               </li>
               <li>
-                <a class="has-text-weight-bold" href="#">Other stuff
+                <a class="has-text-weight-bold" href="#">About me
                   <span class="tag is-info ml-2">Also soon!</span>
                 </a>
               </li>
