final header design

--- a/index.html
+++ b/index.html
@@ -18,29 +18,31 @@
       <div class="hero-body"> 
         <div class="container">
           <div class="columns is-centered is-vcentered">
-            <div class="column is-5" id="information-column">
-              <h1 class="title is-size-huge is-size-3-only-touch mb-2">I'm Lenin Nava</h1>
-              <h2 class="subtitle is-size-3 is-size-3-tablet mb-1">And I'm a Front-end <br>
+            <div class="column is-4" id="information-column">
+              <h1 class="title name is-size-huge is-size-3-only-touch mb-5">I'm Lenin Nava</h1>
+              <h2 class="subtitle is-size-3 is-size-3-tablet mb-3">And I'm a Front-end <br>
                 web Developer/designer.</h2>
              <!-- <div class="content mb-1">
                  <p class="has-text-weight-medium is-size-6">
                     I make pretty stuff with <br> <span class="has-text-weight-bold">JavaScript</span> and <span class="has-text-weight-bold">CSS</span> (and lots of tea).
                 </p> 
               </div> -->
-              <div class="container is-narrow" id="social-links">
+              <div class="social-links">
+                
                 <span class="icon is-large">
-                  <a href="twitter.com/lofiln" class="fab fa-lg fa-twitter" style="color: #fff"></a>
+                  <a class="fab fa-lg fa-github-alt" style=""></a>
                 </span>
                 <span class="icon is-large">
-                  <a class="fab fa-lg fa-github-alt" style="color: #fff"></a>
+
+                  <a class="fab fa-lg fa-telegram" style=""></a>
                 </span>
                 <span class="icon is-large">
-                  <a class="fab fa-lg fa-telegram-plane" style="color: #fff"></a>
+                  <a href="twitter.com/lofiln" class="fab fa-lg fa-twitter" style=""></a>
                 </span>
               </div>
             </div>
             <div class="column has-text-right is-hidden-touch has-text-weight-normal is-family-secondary">
-              <nav class="links" style="font-size: 4.5rem;">
+              <nav class="section-links" style="font-size: 4.5rem;">
                 <ul>
                   <li>
                     <a class="link-1" href="#projects">Projects,</a>
